--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   
 
-  <title>Resume - AQM Tipu Sultan Eiko</title>
+  <title>Portfolio - AQM Tipu Sultan Eiko</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
