--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
 
   <title>Portfolio - AQM Tipu Sultan Eiko</title>
+  <link rel="shortcut icon" href="img/avatar.png" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
