--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
+	<li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#courses">Professional Courses</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
@@ -216,6 +219,26 @@ to work in a place where I get to learn new things every now and then.</p>
       </div>
     </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="courses">
+      <div class="w-100">
+	      <h2 class="mb-5">Professional Courses</h2>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">			<a href="http://www.atcomputer.net.bd" target="_blank">
+			AT Computer &amp; Solutions Ltd.
+			</a></h3>
+            <div class="subheading mb-3">CISCO Certified Network Associate (CCNA)</div>
+            <div>CCNA Routing and Switching</div>
+           
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - August 2019 </span>
+          </div>
+        </div>	      
+	
+	</div>
+    </section>
+	  
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
