--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ to work in a place where I get to learn new things every now and then.</p>
 			</a>
 			</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
+		  <div>Information and Communication Engineering</div>
             <p>GPA: 2.95/4</p>
           </div>
           <div class="resume-date text-md-right">
