--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@ to work in a place where I get to learn new things every now and then.</p>
 			</a>
 			</h3>
             <div class="subheading mb-3">Higher School Certificate</div>
+		  <div>Dhaka Board</div>
+		<div>Science</div>
             <p>GPA: 5/5</p>
           </div>
           <div class="resume-date text-md-right">
@@ -210,6 +212,8 @@ to work in a place where I get to learn new things every now and then.</p>
 			</a>
 			</h3>
             <div class="subheading mb-3">Secondary School Certificate</div>
+		  		  <div>Dhaka Board</div>
+		<div>Science</div>
             <p>GPA: 5/5</p>
           </div>
           <div class="resume-date text-md-right">
