--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ to work in a place where I get to learn new things every now and then.</p>
           <div class="resume-content">
             <h3 class="mb-0"> Online Web Portal</h3>
             <div class="subheading mb-3">HTML,CSS,JS,C, PHP,MYSQL,XAMPP</div>
-            <p>Web portal with admin login system to post news, hosted on <a href="https://byet.host" target="_blank">Bytehost.org </a>. Security was also ensured with 3 months temporary SSL subscription.
+            <p>Web portal with admin login system to post news, hosted on <a href="https://byet.host" target="_blank">Bytehost</a>. Security was also ensured with 3 months temporary SSL subscription.
 			</p>
           </div>
 		</div>
