--- a/index.html
+++ b/index.html
@@ -115,6 +115,43 @@ to work in a place where I get to learn new things every now and then.</p>
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Software Engineer </h3>
+            <div class="subheading mb-3"><a href = "http://iquantile.com" target="_blank">iQuantile</a> </div>
+            <p>  Mostly used technologies are Laravel, AWS, Docker,Django and Linux.
+			</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2020 - </span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Backend Developer </h3>
+            <div class="subheading mb-3"><a href = "https://arcadestudiosbd.com/" target="_blank">Arcade Studios</a> </div>
+            <p>  Mostly used technologies are Laravel, PHP, Serverless, AWS, Django.
+			</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Nov 2020 </span>
+          </div>
+        </div>
+
+         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Team Lead (Contract) </h3>
+            <div class="subheading mb-3"><a href = "https://large-it.com/" target="_blank">Large IT Solutions</a> </div>
+            <p>  Mostly used technologies are Laravel, Vue .
+			</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sept 2020 - Nov 2020 </span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"> Web Developer</h3>
@@ -123,7 +160,7 @@ to work in a place where I get to learn new things every now and then.</p>
 			</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2018 - June 2019</span>
+            <span class="text-primary">May 2019 - June 2020</span>
           </div>
         </div>
 
@@ -138,7 +175,7 @@ to work in a place where I get to learn new things every now and then.</p>
 			</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017 - November 2017</span>
+            <span class="text-primary">Oct 2017 - Jan 2018</span>
           </div>
         </div>
 
@@ -330,39 +367,78 @@ to work in a place where I get to learn new things every now and then.</p>
 		
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"> Virtual Learning Enviournment</h3>
-            <div class="subheading mb-3">JAVA APPLET, JAVA OOP</div>
-            <p> An easy learning system for kids with all alphabets, words and beautiful songs. Has an attractive UI and easy usability.
+            <a href="https://wam.academy/"><h3 class="mb-0"> We Are Marcus</h3></a>
+            <div class="subheading mb-3">Laravel, Vue, AWS</div>
+            <p> SASS SPA Education Platform for We are Marcus.
 			</p>
           </div>
 		</div>
-		
+
+         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://database.cidny.org/"><h3 class="mb-0"> CID-NY</h3></a>
+            <div class="subheading mb-3">Django, Vue, AWS</div>
+            <p> SPA NGO Management Platform for Center For Independence of the Disabled, New York.
+			</p>
+          </div>
+		</div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"> Online Web Portal</h3>
-            <div class="subheading mb-3">HTML,CSS,JS,C, PHP,MYSQL,XAMPP</div>
-            <p>Web portal with admin login system to post news, hosted on <a href="https://byet.host" target="_blank">Bytehost</a>. Security was also ensured with 3 months temporary SSL subscription.
+            <a href="https://quantibly.com/"><h3 class="mb-0"> Quantibly</h3></a>
+            <div class="subheading mb-3">Django, Vue, AWS</div>
+            <p> SASS SPA NGO Management Platform.
 			</p>
           </div>
 		</div>
-		
-		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"> QuickChat</h3>
-            <div class="subheading mb-3">Android Studio, JAVA OOP, Firebase</div>
-            <p> End to end chat system using firebase. Quick and responsive system with great UI.
+            <a href="https://www.urbaneraltd.com/"><h3 class="mb-0"> Urban Era Ltd</h3></a>
+            <div class="subheading mb-3">Laravel, Vue, AWS</div>
+            <p> Ecommerce Platform with affiliate program.
 			</p>
           </div>
 		</div>
-		
-		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"> Temperature Converter</h3>
-            <div class="subheading mb-3">Android Studio, JAVA OOP, JAVA OOP</div>
-            <p> Android app for converting temperature from one unit to another easily.
+            <a href="https://emptrack.iquantile.com/"><h3 class="mb-0"> iQuantile Emptrack</h3></a>
+            <div class="subheading mb-3">Laravel, Livewire</div>
+            <p> Employee tracker system, a subsection of erp.
 			</p>
           </div>
 		</div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://isp.essenceitbd.com/"><h3 class="mb-0"> ISP Management System</h3></a>
+            <div class="subheading mb-3">Laravel, Axios</div>
+            <p> ISP Management System For Essence IT.
+			</p>
+          </div>
+		</div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Arcade Studios API</h3>
+            <div class="subheading mb-3">PHP, Django, Laravel, Serverless, AWS</div>
+            <p> Different kind of api and serverless functions development and used lambda to host to AWS.
+			</p>
+          </div>
+		</div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Arcade Studios Websites</h3>
+            <div class="subheading mb-3">PHP, Wordpress</div>
+            <p> Various Portfolio , Ecommerce and Game Listing websites for this company. such as <a href="https://3dtools.org/">3D Tools</a>, <a href="https://apkgamers.club/">APK Gamers Club</a>, <a href="https://arcadestudiosbd.com/">Company Portfolio</a> and more.
+			</p>
+          </div>
+		</div>
+
+		
+
 		
       </div>
     </section>
