--- a/index.html
+++ b/index.html
@@ -118,8 +118,20 @@ to work in a place where I get to learn new things every now and then.</p>
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"> Software Engineer </h3>
-            <div class="subheading mb-3"><a href = "http://iquantile.com" target="_blank">iQuantile</a> </div>
+            <div class="subheading mb-3"><a href = "https://iquantile.com" target="_blank">iQuantile</a> </div>
             <p>  Mostly used technologies are Laravel, AWS, Docker,Django and Linux.
+			</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2020 - </span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Software Engineer </h3>
+            <div class="subheading mb-3"><a href = "https://itqaan.io/" target="_blank">ItQaan</a> </div>
+            <p>  Mostly used technologies are Laravel, AWS.
 			</p>
           </div>
           <div class="resume-date text-md-right">
