--- a/index.html
+++ b/index.html
@@ -114,16 +114,28 @@ to work in a place where I get to learn new things every now and then.</p>
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+	      
+      	 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"> Software Developer </h3>
+            <div class="subheading mb-3"><a href = "https://nga911.com/" target="_blank">Next Generation Advanced</a> </div>
+            <p>  Mostly used technologies are Laravel, AWS, Docker, RabbitMQ, Jenkin and Linux.
+			</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2022 - </span>
+          </div>
+        </div>
 
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"> Software Engineer </h3>
             <div class="subheading mb-3"><a href = "https://iquantile.com" target="_blank">iQuantile</a> </div>
-            <p>  Mostly used technologies are Laravel, AWS, Docker,Django and Linux.
+            <p>  Mostly used technologies are Laravel, AWS, Docker, Python, Django, Vue and Linux.
 			</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Dec 2020 - </span>
+            <span class="text-primary">Dec 2020 - April 2022</span>
           </div>
         </div>
 
@@ -135,7 +147,7 @@ to work in a place where I get to learn new things every now and then.</p>
 			</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2021 - </span>
+            <span class="text-primary">June 2021 - 2022</span>
           </div>
         </div>
 
